# DesktopElf

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
resources/config/: default_config.json
src/: main.cpp
src/controllers/: ConfigManager.cpp  ConfigManager.h  FitnessManager.cpp  FitnessManager.h  SpriteController.cpp  SpriteController.h  TimerManager.cpp  TimerManager.h
src/qml/: CalendarCell.qml  ContextMenu.qml  FitnessCalendar.qml  FitnessCalendar2.qml  SettingsWindow.qml  main.qml
